feat: fail fast on strongly encapsulated module access with actionable --add-opens hint